# axum-proxied

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
ci/: extract.sh  fuzz.sh  proxy-v1.sh  proxy-v2.sh  proxy.sh  run-curl-example.sh
dev/: haproxy.conf  test-extract.sh  test-proxy-v1.sh  test-proxy-v2.sh  test-proxy.sh
examples/: extract.rs  proxy-protocol.rs  proxy.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: extract_forwarded_interface.rs  proxy_parse.rs
src/: extract.rs  lib.rs  parser.rs  proxy.rs
src/extract/: forwarded.rs  mod.rs  xforwardedfor.rs
