[package]
name = "axum-proxied"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", default-features = false, features = ["tokio"] }
tokio = { version = "1.44.1", default-features = false, features = ["io-util", "net"] }
tracing = { version = "0.1", optional = true }

[features]
default = ["http1", "tracing"]
http1 = ["axum/http1"]
http2 = ["axum/http2"]
tracing = ["dep:tracing", "axum/tracing", "tokio/tracing"]

[dev-dependencies]
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
