[package]
name = "axum-proxied"
description = "Helpers for running axum behind a reverse proxy."
version = "0.2.4"
edition = "2024"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/bheesham/axum-proxied"
keywords = ["axum", "proxy", "http", "web"]
categories = ["web-programming"]
include = [
  "/src",
  "/examples",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE-APACHE",
  "/LICENSE-MIT",
]

[dependencies]
axum = { version = "0.8.1", default-features = false, features = ["tokio"] }
tokio = { version = "1.44.2", default-features = false, features = ["io-util", "net"] }
tracing = { version = "0.1", optional = true }

[features]
default = ["http1", "tracing"]
http1 = ["axum/http1"]
http2 = ["axum/http2"]
tracing = ["dep:tracing", "axum/tracing", "tokio/tracing"]

[dev-dependencies]
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "proxy"
doc-scrape-examples = true

[[example]]
name = "extract"
doc-scrape-examples = true
